syntax = "proto3";

package zitadel.context.v2alpha;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/context/v2alpha;context";

import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message OrgContext {
  oneof ctx {
    string org_id = 1;
    string org_domain = 2;
  }
}

message Context {
  oneof ctx {
    string org_id = 1;
    string org_domain = 2;
    bool instance = 3;
  }
}

message ObjectDetails {
  //sequence represents the order of events. It's always counting
  //
  // on read: the sequence of the last event reduced by the projection
  //
  // on manipulation: the timestamp of the event(s) added by the manipulation
  uint64 sequence = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"2\"";
    }
  ];
  //creation_date is the timestamp where the first operation on the object was made
  //
  // on read: the timestamp of the first event of the object
  //
  // on create: the timestamp of the event(s) added by the manipulation
  google.protobuf.Timestamp creation_date = 2;
  //change_date is the timestamp when the object was changed
  //
  // on read: the timestamp of the last event reduced by the projection
  //
  // on manipulation: the timestamp of the event(s) added by the manipulation
  google.protobuf.Timestamp change_date = 3;
  //resource_owner is the organization or instance_id an object belongs to
  string resource_owner = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"69629023906488334\"";
    }
  ];
}
